--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </table>
         <form>
             <input type="text" id="guessInput" placeholder="A0" >
-            <input type="button" id="fireButton" value="Fire!">
+            <input type="button" id="fireButton" value="Fire!" onClick="handleFireButton();">
         </form>
     </div>
     <script src="battleship.js"></script>
